--- a/index.css
+++ b/index.css
@@ -1220,17 +1220,8 @@ canvas:focus {
 }
 
 @media only screen and (max-width: 1023px) and (orientation: landscape) {
-	main {
-		padding: 2% 0 0 0;
-	}
-	header h1 {
-		font-size: 16px;
-	}
 	.for-phone {
 		display: block;
-	}
-	nav ul li button span {
-		display: none;
 	}
 	.card {
 		border-radius: 0;
@@ -1242,20 +1233,29 @@ canvas:focus {
 	h2 {
 		display: none;
 	}
+	.wrapper-bottom-section {
+		display: none;
+	}
+	header h1 {
+		font-size: 16px;
+	}
+	nav ul li button span {
+		display: none;
+	}
+	main {
+		padding: 2% 0 0 0;
+	}
 	.wrapper-playzone {
 		height: 100%;
 		gap: 0;
 		overflow: hidden;
 	}
-	.wrapper-bottom-section {
-		display: none;
+	.wrapper-left-section {
+		padding: 0;
 	}
 	.wrapper-left-section form {
 		justify-content: unset;
 		align-items: center;
-	}
-	.wrapper-left-section {
-		padding: 0;
 	}
 	.wrapper-selectors {
 		width: 100%;
@@ -1271,9 +1271,6 @@ canvas:focus {
 		height: 23%;
 	}
 	.wrapper-mode-selectors {
-		width: 30%;
-	}
-	.wrapper-mode-selectors {
 		display: flex;
 		flex-direction: column;
 		width: 30%;
@@ -1287,7 +1284,8 @@ canvas:focus {
 		align-items: center;
 	}
 	.wrapper-slot {
-		width: 1.712%
+		width: 1.712%;
+		height: 80%;
 	}
 	.coin {
 		width: 3.701%;
