--- a/index.css
+++ b/index.css
@@ -14,15 +14,23 @@ html {
 body {
 	width: 100%;
 	height: 100%;
-	margin: 0;
-	padding: 0;
 	font: 1rem "Inter", sans-serif;
+}
+
+@keyframes fade {
+	0% { opacity: 1; }
+	50% { opacity: 0; }
+	100% { opacity: 1; }
 }
 
 :root {
 	--mainColor: #2E2E2E;
 	--textColor: #F2F2F2;
 }
+
+/*////////////////*/
+/* Useful Classes */
+/*////////////////*/
 
 .card {
 	background-color: var(--mainColor);
@@ -45,12 +53,6 @@ body {
 	z-index: 1;
 }
 
-@keyframes fade {
-	0% { opacity: 1; }
-	50% { opacity: 0; }
-	100% { opacity: 1; }
-}
-
 /*///////////////*/
 /* Please rotate */
 /*///////////////*/
@@ -67,7 +69,7 @@ body {
 	z-index: 2;
 }
 
-.please-rotate .phone {
+.please-rotate div {
 	height: 50px;
 	width: 100px;
 	border: 3px solid white;
@@ -331,7 +333,6 @@ header {
 header h1 {
 	font-size: 2.4rem;
 	margin: 0;
-	text-align: center;
 	cursor: default;
 	user-select: none;
 }
@@ -339,14 +340,13 @@ header h1 {
 nav {
 	width: 50%;
 	height: 100%;
-	padding: 0 1%;
-	font-size: 1.5vh;
+	padding: 0 0.5%;
+	font-size: 0.9rem;
 }
 
 nav ul {
 	display: flex;
 	justify-content: flex-end;
-	align-items: stretch;
 	gap: 5%;
 	height: 100%;
 	padding: 0;
@@ -354,19 +354,20 @@ nav ul {
 	list-style-type: none;
 }
 
-nav ul li div {
+.nav-user {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	gap: 15px;
+	gap: 8px;
 	height: 100%;
 }
 
-.wrapper-avatar {
+.nav-user-avatar {
+	aspect-ratio: 1 / 1;
 	height: 100%;
 }
 
-.wrapper-avatar img {
+.nav-user-avatar img {
 	height: 100%;
 	object-fit: fill;
 }
@@ -412,13 +413,12 @@ h2 {
 	margin: 0 0 10px 0;
 	color: var(--textColor);
 	user-select: none;
-	font-size: 3vh;
+	font-size: 1.6rem;
 	transition: opacity 0.5s;
 }
 
 .wrapper-playzone {
 	display: flex;
-	/* justify-content: space-between; */
 	gap: 2%;
 	height: 95%;
 	width: 100%;
@@ -428,18 +428,9 @@ h2 {
 /* Game - Game selector Form */
 /*///////////////////////////*/
 
-.wrapper-overflow {
-	overflow: hidden;
-	width: 20%;
-}
-
 .wrapper-left-section {
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	height: 100%;
-	padding: 5% 3%;
-	overflow-y: auto;
+	width: 20%;
+	padding: 1% 0.5%;
 }
 
 .wrapper-left-section form {
@@ -452,7 +443,7 @@ h2 {
 }
 
 .wrapper-left-section form h3 {
-	font-size: 2.5vh;
+	font-size: 1.4rem;
 	margin: 5% 0;
 	user-select: none;
 }
@@ -666,7 +657,7 @@ h2 {
 	text-wrap: wrap;
 	text-align: start;
 	font-weight: bolder;
-	font-size: 1.8vh;
+	font-size: 1rem;
 	padding-left: 25%;
 	user-select: none;
 }
@@ -702,7 +693,7 @@ h2 {
 	width: 100%;
 	text-align: center;
 	font-family: 'Press Start 2P';
-	font-size: 2.3vh;
+	font-size: 1.3rem;
 	color: var(--textColor);
 	text-shadow: 0 0 5px #ec41bf, 0 0 10px #8606b6, 0 0 15px #fff, 0 0 20px #921982, 0 0 25px #770067;
 	animation: fade 3s infinite;
@@ -1111,7 +1102,7 @@ canvas:focus {
 }
 
 .wrapper-tabs-button h3 {
-	font-size: 2.708vh;
+	font-size: 1.4rem;
 	margin: 0;
 	user-select: none;
 }
@@ -1163,13 +1154,9 @@ canvas:focus {
 	height: auto;
 	width: 100%;
 	padding: 0;
-	font-size: 1.5vh;
+	font-size: 0.8rem;
 	text-wrap: wrap;
 	word-break: break-all;
-}
-
-.tab-chat td img {
-	height: 50%;
 }
 
 /*///////////////////*/
@@ -1187,9 +1174,9 @@ canvas:focus {
 
 .chat-input i {
 	position: absolute;
-	top: 13px;
+	top: 10px;
 	left: 0;
-	font-size: 1.5em;
+	font-size: 1.5rem;
 	animation: fade 3s infinite;
 }
 
@@ -1199,6 +1186,7 @@ canvas:focus {
 	padding: 15px;
 	background: var(--mainColor);
 	color: var(--textColor);
+	font-size: 0.8rem;
 	word-break: break-all;
 	border: none;
 	resize: none;
@@ -1237,13 +1225,15 @@ canvas:focus {
 		border-radius: 0;
 		box-shadow: none;
 		min-width: 100%;
-		width: 93%;
+		width: 92%;
 		height: 100%;
 		position: absolute;
 		top: 0;
 		left: 0;
 	}
-	h2, .wrapper-bottom-section, .wrapper-tabs-button {
+	header h1, .nav-user, h2,
+	.wrapper-bottom-section,
+	.wrapper-tabs-button {
 		display: none;
 	}
 	main {
@@ -1252,26 +1242,21 @@ canvas:focus {
 	}
 	.wrapper-playzone {
 		height: 100%;
-		width: 100%;
 		gap: 0;
-		overflow: hidden;
 		position: relative;
 	}
-	/*/////////////*/
-	/* Menu/Header */
-	/*/////////////*/
+	/*////////*/
+	/* Header */
+	/*////////*/
 	header {
 		position: absolute;
 		right: 0;
 		padding: 2% 0%;
 		height: 100%;
-		width: 7%;
+		width: 8%;
 		border-bottom: unset;
 		border-left: 1px solid rgb(131, 126, 126);
 		z-index: 1;
-	}
-	header img, header h1 {
-		display: none;
 	}
 	nav {
 		width: 100%;
@@ -1280,20 +1265,9 @@ canvas:focus {
 	nav ul {
 		flex-direction: column;
 	}
-	nav ul {
-		width: 100%;
-		height: 100%;
-	}
 	nav ul li {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		text-align: center;
 		width: 100%;
 		height: 100%;
-	}
-	.wrapper-nav-user {
-		display: none;
 	}
 	nav ul li button {
 		display: block;
@@ -1303,21 +1277,23 @@ canvas:focus {
 	nav span {
 		display: none;
 	}
-	/*///////////*/
-	/* Selectors */
-	/*///////////*/
-	.wrapper-left-section form h3,
-	.wrapper-submit-button span {
-		font-size: 1.5rem;
-	}
-	.wrapper-mode-selector span {
-		font-size: 1rem;
-	}
+	/*////////////////////*/
+	/* Game selector Form */
+	/*////////////////////*/
 	.wrapper-left-section {
 		padding: 0;
 	}
 	.wrapper-left-section form {
 		align-items: center;
+		width: 92%;
+		padding: 2% 0%;
+	}
+	.wrapper-left-section form h3 {
+		font-size: 1.5rem;
+		margin: 10px 0;
+	}
+	.wrapper-submit-button span {
+		font-size: 1.25rem;
 	}
 	.wrapper-selectors {
 		width: 100%;
@@ -1342,6 +1318,12 @@ canvas:focus {
 		flex-direction: column;
 		width: 30%;
 	}
+	.wrapper-mode-selector {
+		justify-content: space-around;
+	}
+	.wrapper-mode-selector span {
+		font-size: 1rem;
+	}
 	.wrapper-submit-button {
 		width: 80%;
 		margin-bottom: 1.5%;
@@ -1360,7 +1342,7 @@ canvas:focus {
 	}
 	.go-button {
 		width: 10%;
-		font-size: 1.5rem;
+		font-size: 1.3rem;
 	}
 	/*//////*/
 	/* Chat */
@@ -1370,7 +1352,8 @@ canvas:focus {
 	}
 	.wrapper-tabs-tables table {
 		height: 100%;
-		width: 93%;
+		width: 92%;
+		padding: 2%;
 	}
 	.chat-input {
 		top: auto;
