--- a/index.css
+++ b/index.css
@@ -28,6 +28,7 @@ body {
 :root {
 	--mainColor: #2E2E2E;
 	--textColor: #F2F2F2;
+	--10pxInREM: 0.688rem;
 }
 
 /*////////////////*/
@@ -36,8 +37,8 @@ body {
 
 .card {
 	background-color: var(--mainColor);
-	border-radius: 10px;
-	box-shadow: 0 3px 10px 3px rgb(131, 126, 126);
+	border-radius: var(--10pxInREM);
+	box-shadow: 0 0.188rem var(--10pxInREM) 0.188rem rgb(131, 126, 126);
 	overflow: auto;
 }
 
@@ -66,7 +67,8 @@ span { font-size: 1rem; }
 td { font-size: 0.8rem; }
 textarea { font-size: 0.8rem; }
 
-@media (min-width: 2880px) { html { font-size: 35px; } }
+@media (min-width: 5660px) { html { font-size: 60px; } }
+@media (max-width: 5660px) { html { font-size: 40px; } }
 @media (max-width: 2880px) { html { font-size: 20px; } }
 @media (max-width: 1920px) { html { font-size: 16px; } }
 @media (max-width: 1200px) { html { font-size: 15px; } }
@@ -93,7 +95,7 @@ textarea { font-size: 0.8rem; }
 	height: 50px;
 	width: 100px;
 	border: 3px solid white;
-	border-radius: 10px;
+	border-radius: var(--10pxInREM);
 	animation: rotate 1.5s ease-in-out infinite alternate;
 	margin-bottom: 40px;
 }
@@ -357,7 +359,7 @@ header h1 {
 }
 
 nav {
-	width: 50%;
+	width: 100%;
 	height: 100%;
 	padding: 0 0.5%;
 }
@@ -367,7 +369,7 @@ nav ul {
 	justify-content: flex-end;
 	gap: 5%;
 	height: 100%;
-	padding: 0;
+	padding: 0 1%;
 	margin: 0;
 	list-style-type: none;
 }
@@ -376,7 +378,7 @@ nav ul {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	gap: 8px;
+	gap: 0.5rem;
 	height: 100%;
 }
 
@@ -394,7 +396,7 @@ nav ul li button {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	gap: 8px;
+	gap: 0.5rem;
 	height: 100%;
 	padding: 0;
 	margin: 0;
@@ -494,7 +496,7 @@ h2 {
 .game-selector div {
 	width: 100%;
 	border: 2px solid rgb(88, 88, 88);
-	border-radius: 10px;
+	border-radius: var(--10pxInREM);
 	transform-style: preserve-3d;
 	transition: all 175ms cubic-bezier(0, 0, 1, 1);
 }
@@ -612,10 +614,10 @@ h2 {
 	height: 66%;
 	background: #fc2c71;
 	box-shadow:
-		rgba(0,0,0,.8) 0 0 1px 1px,
-		rgba(0,0,0,.8) 0 3px 3px inset,
+		rgba(0, 0, 0, 0.8) 0 0 1px 1px,
+		rgba(0, 0, 0, 0.8) 0 3px 3px inset,
 		#f5213d 0 8px 10px inset,
-		rgba(0,0,0,.3) 0 20px 5px inset,
+		rgba(0, 0, 0, 0.3) 0 20px 5px inset,
 		rgba(255,255,255,.3) 0 -2px 3px inset,
 		#e9233e 0 -7px 20px inset;
 	border: #fc2c71 solid 1px;
@@ -638,10 +640,10 @@ h2 {
 .wrapper-mode-selector [type=radio]:checked ~ .wrapper-circle .base-circle .top-circle {
 	border-color: #19040B;
 	box-shadow:
-		rgba(0,0,0,.8) 0 0 1px 1px,
-		rgba(0,0,0,.8) 0 3px 3px inset,
+		rgba(0, 0, 0, 0.8) 0 0 1px 1px,
+		rgba(0, 0, 0, 0.8) 0 3px 3px inset,
 		#D1253B 0 8px 10px inset,
-		rgba(0,0,0,.3) 0 20px 5px inset,
+		rgba(0, 0, 0, 0.3) 0 20px 5px inset,
 		rgba(255,255,255,.3) 0 -2px 3px inset,
 		#D1253B 0 -7px 20px inset;
 }
@@ -828,9 +830,10 @@ h2 {
 .tournament-match {
 	display: flex;
 	flex-direction: column;
-	gap: 10px;
+	justify-content: space-around;
+	height: 33%;
 	width: 100%;
-	padding: 2%;
+	padding: 5% 2%;
 }
 
 .tournament-player, .tournament-winner {
@@ -867,7 +870,7 @@ h2 {
 
 .bar {
 	width: 70%;
-	height: 2px;
+	height: 0.125rem;
 	background-color: var(--textColor);
 	border-radius: 10px;
 	opacity: 0.8;
@@ -919,6 +922,18 @@ canvas:focus {
 	z-index: 1;
 }
 
+.canvas-user-1 {
+	position: absolute;
+	top: 1%;
+	left: 1%;
+}
+
+.canvas-user-2 {
+	position: absolute;
+	top: 1%;
+	right: 1%;
+}
+
 /*////////////////////////*/
 /* Game - Tournament form */
 /*////////////////////////*/
@@ -939,7 +954,7 @@ canvas:focus {
 }
 
 .tournament-form i {
-	font-size: 2.5vh;
+	font-size: 2rem;
 	position: absolute;
 	left: 0;
 	cursor: pointer;
@@ -1329,7 +1344,7 @@ canvas:focus {
 	.wrapper-mode-selectors {
 		display: flex;
 		flex-direction: column;
-		width: 33%;
+		width: 40%;
 	}
 	.wrapper-mode-selector {
 		justify-content: space-around;
@@ -1420,7 +1435,7 @@ canvas:focus {
 		width: 80%;
 	}
 	.tournament-form i {
-		font-size: 10vh;
+		font-size: 1.5rem;
 		top: calc(50% - 5vh);
 	}
 	.tournament-wrapper-inputs input {
