--- a/index.css
+++ b/index.css
@@ -28,7 +28,6 @@ body {
 :root {
 	--mainColor: #2E2E2E;
 	--textColor: #F2F2F2;
-	--10pxInREM: 0.688rem;
 }
 
 /*////////////////*/
@@ -37,8 +36,8 @@ body {
 
 .card {
 	background-color: var(--mainColor);
-	border-radius: var(--10pxInREM);
-	box-shadow: 0 0.188rem var(--10pxInREM) 0.188rem rgb(131, 126, 126);
+	border-radius: 0.688rem;
+	box-shadow: 0 0.188rem 0.688rem 0.188rem rgb(131, 126, 126);
 	overflow: auto;
 }
 
@@ -62,10 +61,10 @@ body {
 
 h1 { font-size: 2.25rem; }
 h2 { font-size: 1.6rem; }
-h3 { font-size: 1.5rem; }
+h3, .h3 { font-size: 1.5rem; }
 span { font-size: 1rem; }
-td { font-size: 0.8rem; }
-textarea { font-size: 0.8rem; }
+td { font-size: 0.9rem; }
+textarea { font-size: 0.9rem; }
 
 @media (min-width: 5660px) { html { font-size: 60px; } }
 @media (max-width: 5660px) { html { font-size: 40px; } }
@@ -95,7 +94,7 @@ textarea { font-size: 0.8rem; }
 	height: 50px;
 	width: 100px;
 	border: 3px solid white;
-	border-radius: var(--10pxInREM);
+	border-radius: 0.688rem;
 	animation: rotate 1.5s ease-in-out infinite alternate;
 	margin-bottom: 40px;
 }
@@ -255,7 +254,7 @@ textarea { font-size: 0.8rem; }
 }
 
 .sp-login:focus {
-	outline: 5px auto -webkit-focus-ring-color;
+	outline: 5px auto;
 }
 
 .sp-login:active {
@@ -493,15 +492,16 @@ h2 {
 	pointer-events: none;
 }
 
-.game-selector div {
+.game-selector span {
+	display: inline-block;
 	width: 100%;
 	border: 2px solid rgb(88, 88, 88);
-	border-radius: var(--10pxInREM);
+	border-radius: 0.688rem;
 	transform-style: preserve-3d;
 	transition: all 175ms cubic-bezier(0, 0, 1, 1);
 }
 
-.game-selector div::before {
+.game-selector span::before {
 	position: absolute;
 	content: "";
 	width: 100%;
@@ -517,11 +517,11 @@ h2 {
 	transition: all 175ms cubic-bezier(0, 0, 1, 1);
 }
 
-.game-selector div:active {
+.game-selector span:active {
 	transform: translate(0em, 0.75em);
 }
 
-.game-selector div:active::before {
+.game-selector span:active::before {
 	transform: translate3d(0, 0, -1em);
 	box-shadow: 0 0 0 2px rgb(88, 88, 88), 0 0.25em 0 0 rgb(88, 88, 88);
 }
@@ -533,29 +533,31 @@ h2 {
 	height: 0;
 }
 
-.game-selector [type=radio] + div {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	padding: 5px;
+label:has(> [type=radio]:focus) {
+	outline: 1px black auto;
+}
+
+.game-selector [type=radio] + span {
+	height: 100%;
+	padding: 3px 5px;
 	background: rgb(115, 115, 115);
 	cursor: pointer;
 }
 
-.game-selector [type=radio]:hover + div {
+.game-selector [type=radio]:hover + span {
 	background-color: rgb(100, 100, 100);
 }
 
-.game-selector [type=radio]:checked + div {
+.game-selector [type=radio]:checked + span {
 	transform: translate(0em, 0.75em);
 	border: 2px ridge black;
 }
 
-.game-selector [type=radio]:checked + div:hover {
+.game-selector [type=radio]:checked + span:hover {
 	background: rgb(115, 115, 115);
 }
 
-.game-selector [type=radio]:checked + div::before {
+.game-selector [type=radio]:checked + span::before {
 	width: 0;
 	height: 0;
 	top: 50%;
@@ -581,21 +583,18 @@ h2 {
 	margin-top: 5px;
 	position: relative;
 	cursor: pointer;
-	z-index: 1;
 }
 
-.wrapper-circle {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.wrapper-mode-selector .wrapper-circle {
+	display: inline-block;
 	aspect-ratio: 1 / 1;
 	height: 100%;
+	width: auto;
+	padding: 0;
 }
 
-.base-circle {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.wrapper-mode-selector .base-circle {
+	display: inline-block;
 	height: 100%;
 	width: 100%;
 	background: #fc2c71;
@@ -606,12 +605,15 @@ h2 {
 		rgba(255, 255, 255, 0.5) 0 12px 5px inset,
 		#B01F4F 0 -12px 5px inset,
 		rgba(0, 0, 0, 0.8) 0 4px 8px;
-	z-index: -2;
 }
 
-.top-circle {
+.wrapper-mode-selector .top-circle {
+	display: inline-block;
 	aspect-ratio: 1 / 1;
 	height: 66%;
+	width: auto;
+	padding: 0;
+	margin-top: 15%;
 	background: #fc2c71;
 	box-shadow:
 		rgba(0, 0, 0, 0.8) 0 0 1px 1px,
@@ -622,8 +624,6 @@ h2 {
 		#e9233e 0 -7px 20px inset;
 	border: #fc2c71 solid 1px;
 	border-radius: 100%;
-	top: 15%;
-	left: 15%;
 	cursor: pointer;
 }
 
@@ -671,7 +671,7 @@ h2 {
 	border-color: black;
 }
 
-.wrapper-mode-selector span {
+.wrapper-mode-selector .mode-text {
 	display: flex;
 	align-items: center;
 	height: 100%;
@@ -710,7 +710,7 @@ h2 {
 	user-select: none;
 }
 
-.wrapper-submit-button span {
+.wrapper-submit-button .coin-text {
 	width: 100%;
 	text-align: center;
 	font-size: calc(0.6rem + 1vh);
@@ -720,7 +720,7 @@ h2 {
 	animation: fade 3s infinite;
 }
 
-.wrapper-submit-button span.active {
+.wrapper-submit-button .coin-text.active {
 	opacity: 0;
 	animation: none;
 }
@@ -748,7 +748,7 @@ h2 {
 	width: 4px;
 	height: 100%;
 	background-color: #CCC;
-	z-index: 2;
+	z-index: 1;
 }
 
 .slot:after {
@@ -769,7 +769,6 @@ h2 {
 	height: 60%;
 	border-radius: 100%;
 	background: #e79178;
-	z-index: 1;
 }
 
 .coin:after {
@@ -808,7 +807,9 @@ h2 {
 	);
 	margin-left: 100%;
 	transition: none;
-	animation: dirX 3s 0.2s forwards var(--x), dirY 3s 0.2s forwards var(--y);
+	animation:
+		dirX 3s 0.2s forwards var(--x),
+		dirY 3s 0.2s forwards var(--y);
 }
 
 @keyframes dirX { to { translate: -150px; } }
@@ -1136,8 +1137,9 @@ canvas:focus {
 	cursor: pointer;
 }
 
-.wrapper-tabs-button h3 {
+.wrapper-tabs-button .h3 {
 	margin: 0;
+	font-weight: bold;
 	user-select: none;
 }
 
@@ -1156,7 +1158,6 @@ canvas:focus {
 	min-height: 90%;
 	width: 100%;
 	overflow: hidden;
-	position: relative;
 }
 
 .wrapper-tabs-tables table {
@@ -1192,38 +1193,52 @@ canvas:focus {
 	word-break: break-all;
 }
 
-/*///////////////////*/
-/* Game - Chat input */
-/*///////////////////*/
+/*///////////////*/
+/* Game - Inputs */
+/*///////////////*/
 
-.chat-input {
-	height: 15%;
-	width: 100%;
+.wrapper-inputs {
 	display: flex;
+	flex-direction: column-reverse;
 	justify-content: flex-end;
 	align-items: center;
+	height: 15%;
+	min-height: 15%;
+	width: 100%;
+	overflow: hidden;
 	position: relative;
 }
 
-.chat-input i {
-	position: absolute;
-	top: 10px;
-	left: 0;
-	font-size: 1.4rem;
-	animation: fade 3s infinite;
+.wrapper-inputs div {
+	display: flex;
+	height: 100%;
+	min-height: 100%;
+	width: 100%;
 }
 
-.chat-input textarea {
+.wrapper-inputs div.active {
+	z-index: 1;
+	order: 0;
+}
+
+.wrapper-inputs textarea {
 	height: 100%;
 	width: 100%;
-	padding: 15px;
+	padding: 5% 6%;
 	background: var(--mainColor);
 	color: var(--textColor);
 	word-break: break-all;
 	border: none;
 	resize: none;
 	outline: none;
-	border: none;
+}
+
+.wrapper-inputs i {
+	position: absolute;
+	top: calc(5% + 5px);
+	left: 0;
+	font-size: 1.4rem;
+	animation: fade 3s infinite;
 }
 
 /*//////////////////////*/
