--- a/index.css
+++ b/index.css
@@ -1187,7 +1187,7 @@ canvas:focus {
 
 .tab-chat td {
 	display: flex;
-	align-items: center;
+	flex-direction: column;
 	gap: 3%;
 	height: auto;
 	width: 100%;
@@ -1197,22 +1197,68 @@ canvas:focus {
 	word-break: break-all;
 }
 
-.tab-chat .chat-user-avatar {
+.tab-chat .chat-message {
+	display: flex;
+	align-items: center;
+	gap: 0.3rem;
+}
+
+.tab-chat .chat-message .chat-user-avatar {
 	height: 1.5rem;
 	width: 1.5rem;
 	display: flex;
 }
 
-.tab-chat .chat-user-avatar img {
+.tab-chat .chat-message .chat-user-avatar img {
 	object-fit: contain;
 }
 
-.tab-chat p {
+.tab-chat .chat-message p {
 	margin: 0;
+	width: 100%;
 }
 
-.tab-chat span {
+.tab-chat .chat-message span {
 	font-weight: 600;
+}
+
+.tab-chat .chat-options {
+	display: none;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	flex-wrap: wrap;
+	gap: 0.3rem;
+	margin-top: 0.3rem;
+	font-size: 0.73rem;
+}
+
+.tab-chat .chat-options button {
+	background-color: var(--mainColor);
+	color: var(--textColor);
+	border: none;
+	cursor: pointer;
+}
+
+.tab-chat .chat-options button.hover-green:hover {
+	color: rgb(25, 175, 25);
+}
+
+.tab-chat .chat-options button.hover-blue:hover {
+	color: rgb(40, 175, 230);
+}
+
+.tab-chat .chat-options button.hover-red:hover {
+	color: rgb(240, 20, 20);
+}
+
+.tab-chat .chat-options .fa-circle-dot {
+	margin-top: 0.313rem;
+	font-size: 0.3rem;
+}
+
+.tab-chat td:hover .chat-options {
+	display: flex;
 }
 
 /*///////////////*/
@@ -1296,7 +1342,8 @@ canvas:focus {
 		display: block;
 	}
 	.zindex {
-		z-index: -1;
+		/* z-index: -1; */
+		display: none;
 	}
 	/*//////*/
 	/* Hide */
@@ -1424,6 +1471,17 @@ canvas:focus {
 		width: 92%;
 		padding: 2%;
 	}
+	.tab-chat td:hover .chat-options {
+		display: none;
+	}
+	.tab-chat td .for-phone {
+		display: flex;
+		gap: 5px;
+		margin-left: 20px;
+	}
+	.tab-chat td .for-phone button {
+		width: 5rem;
+	}
 	/*///////////////*/
 	/* Game - Inputs */
 	/*///////////////*/
@@ -1438,11 +1496,11 @@ canvas:focus {
 	.wrapper-inputs textarea {
 		height: 100%;
 		width: 100%;
-		padding: 1.6% 1rem;
+		padding: 0.4rem 1rem;
 		border-top: 1px solid rgb(131, 126, 126);
 	}
 	.wrapper-inputs i {
-		top: 23.6%;
+		top: 0.5rem;
 		left: 0;
 		font-size: 1rem;
 		animation: fade 3s infinite;
